--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
     "@angular/platform-browser": "6.0.2",
     "@angular/platform-browser-dynamic": "6.0.2",
     "@angular/router": "6.0.2",
+    "@capacitor/core": "^1.0.0-alpha.38",
     "@ionic-native/core": "5.0.0-beta.10",
-    "@ionic-native/splash-screen": "5.0.0-beta.10",
     "@ionic-native/status-bar": "5.0.0-beta.10",
     "@ionic/angular": "4.0.0-alpha.7",
     "@ionic/schematics-angular": "latest",
@@ -30,13 +30,14 @@
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
+    "@angular-devkit/build-angular": "0.6.0",
+    "@angular-devkit/core": "0.6.0",
+    "@angular-devkit/schematics": "0.6.0",
     "@angular/cli": "6.0.1",
     "@angular/compiler": "6.0.2",
     "@angular/compiler-cli": "6.0.2",
     "@angular/language-service": "6.0.2",
-    "@angular-devkit/build-angular": "0.6.0",
-    "@angular-devkit/core": "0.6.0",
-    "@angular-devkit/schematics": "0.6.0",
+    "@capacitor/cli": "^1.0.0-alpha.38",
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~10.1.0",
