--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~10.1.0",
     "codelyzer": "~4.3.0",
+    "firebase-tools": "^3.19.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~1.7.1",
