--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mario-kart-randomizer",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "author": "Ionic Framework",
   "homepage": "http://ionicframework.com/",
   "scripts": {
@@ -20,6 +20,7 @@
     "@angular/http": "6.0.2",
     "@angular/platform-browser": "6.0.2",
     "@angular/platform-browser-dynamic": "6.0.2",
+    "@angular/pwa": "^0.6.8",
     "@angular/router": "6.0.2",
     "@capacitor/core": "^1.0.0-alpha.38",
     "@ionic/angular": "4.0.0-alpha.7",
@@ -27,7 +28,8 @@
     "@ionic/storage": "^2.1.3",
     "core-js": "^2.5.3",
     "rxjs": "6.1.0",
-    "zone.js": "^0.8.26"
+    "zone.js": "^0.8.26",
+    "@angular/service-worker": "6.0.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.6.0",
